<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"

    tools:context=".SignupActivity">


    <ImageView
        android:id="@+id/imgRedd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/imaInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgInsta"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/reddit" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/nameImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoo" />

    <TextView
        android:id="@+id/tvBien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtName"
        app:layout_constraintStart_toEndOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtSurname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/txtNinckname"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtNinckname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/nick"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button"
        tools:layout_editor_absoluteX="25dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_special"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toTopOf="@+id/imgTwi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgDisc"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/imaInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgTwi"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/discord" />

    <ImageView
        android:id="@+id/imgFacebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imaInfo"
        app:layout_constraintEnd_toStartOf="@+id/imgTwi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imgInsta"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/imaInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgTele"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgRedd"
        app:srcCompat="@drawable/instagram" />

    <ImageView
        android:id="@+id/imgTele"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/imaInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgInsta"
        app:srcCompat="@drawable/telegram" />

    <ImageView
        android:id="@+id/imgTwi"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/imaInfo"
        app:layout_constraintBottom_toTopOf="@+id/imgInsta"
        app:layout_constraintEnd_toStartOf="@+id/imgDisc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgFacebook"
        app:srcCompat="@drawable/twitter" />


</androidx.constraintlayout.widget.ConstraintLayout>