<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frutas">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ttl_dos"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgFresas"
        android:layout_width="193dp"
        android:layout_height="134dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toStartOf="@+id/tvFresas"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/fresas" />

    <ImageView
        android:id="@+id/imgPapaya"
        android:layout_width="193dp"
        android:layout_height="134dp"
        android:layout_marginStart="48dp"
        android:background="@color/white"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toTopOf="@+id/imgUvas"
        app:layout_constraintEnd_toStartOf="@+id/tvtPapaya"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFresas"
        app:layout_constraintVertical_bias="0.486"
        app:srcCompat="@drawable/papaya" />

    <ImageView
        android:id="@+id/imgUvas"
        android:layout_width="193dp"
        android:layout_height="134dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="76dp"
        android:background="@color/white"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvUva"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/uva" />

    <TextView
        android:id="@+id/tvFresas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/traduccion"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgFresas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgFresas"
        app:layout_constraintVertical_bias="0.488" />

    <TextView
        android:id="@+id/tvtPapaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/traduccion"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgPapaya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgPapaya"
        app:layout_constraintVertical_bias="0.488" />

    <TextView
        android:id="@+id/tvUva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/traduccion"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgUvas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgUvas"
        app:layout_constraintVertical_bias="0.466" />

</androidx.constraintlayout.widget.ConstraintLayout>